--- a/css/charter-style.css
+++ b/css/charter-style.css
@@ -31,6 +31,7 @@ a {
 .pcard {
   background-color: rgb(220, 231, 246);
   padding: 2px 20px;
+  padding-bottom: 20px;
 }
 
 .content-line span {
@@ -57,4 +58,9 @@ a {
   border-radius: 50%;
   padding: 5px;
   margin-right: 8px;
+}
+
+.time-line .content-line {
+  border-bottom: 2px dotted dodgerblue;
+  margin-top: 8px;
 }
